# Master-Assembler

./: .gitattributes  .gitignore  README.md  STARTUP.md  animation.html  block.md  build-desktop.bat  start.sh  start_backend.sh  start_frontend.sh  style.md  test_api.sh  test_orientation.py  test_orientation.sh  test_orientation_visual.html
backend/: _api_test.py  _diag.py  _perf.py  _perf_detail.py  _test_pack_direct.py  _verify_optimization.py  backend.spec  requirements.txt  run.py
backend-rust/: Cargo.toml
backend-rust/src/: api.rs  block_optimizer.rs  main.rs  models.rs  validator.rs
backend/app/: containers.json  main.py
backend/app/api/: optimize.py
backend/app/engine/: advanced_block_optimizer.py  block_optimizer.py  extreme_point.py  feasibility.py  genetic_algorithm.py  local_search.py  optimizer_base.py  packer.py  pareto_optimizer.py  rotation.py  space_cutter.py
backend/tests/: test_advanced_block_api.py  test_advanced_block_optimizer.py  test_api.py  test_block_optimizer.py  test_extreme_point.py  test_feasibility.py  test_genetic_algorithm.py  test_greedy_vs_block.py  test_local_search.py  test_packer.py  test_pareto_optimizer.py  test_rotation.py  test_space_cutter.py  test_user_scenario.py  test_validators.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.test.tsx  App.tsx  config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: advanced_block_optimizer.rs  extreme_point.rs  feasibility.rs  lib.rs  main.rs  models.rs  rotation.rs
(+30 files in other folders)
